# ray-tracer-webgl

./: .gitignore  1.main.js  1.main.worker.js  2.main.worker.js  Cargo.toml  README.md  TODO.md  index.html  index.js  main.js  main.wasm  main.worker.js  package-lock.json  package.json  shader.frag  shader.vert  style.scss  webpack.config.js  worker.js
src/: camera.rs  dom.rs  glsl.rs  hit.rs  lib.rs  m4.rs  math.rs  ray.rs  sphere.rs  state.rs  vec3.rs  webgl.rs
static/: index.html  shader.frag
