[package]
name = "ray-tracer-webgl"
version = "0.1.0"
authors = ["Austin Theriot"]
edition = "2021"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
wasm-bindgen = "0.2.78"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
js-sys = "0.3.55"
console_error_panic_hook = "0.1.7"
lazy_static = "1.4.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'HtmlScriptElement',
  'WebGlVertexArrayObject',
  'WebGlUniformLocation',
  'Performance'
]